client/src/index.css
:root {
  --dark: #101010;
  --primary: #F4CE10;
  --primary-light: #FFFADF;
  --secondary: #866103;
  --medium: #404040;
  --light: #ffffff;
  --error: rgb(228, 46, 1);
  --spacing-one: calc(1rem * 0.5);
  --spacing-two: calc(1rem);
  --spacing-three: calc(1rem * 1.5);
  --spacing-four: calc(1rem * 2);
}

* {
  box-sizing: border-box;
}

html,
body {
  min-height: 100%;
  font-size: 15px;
}

body {
  margin: 0;
  padding: 0;
  font-family: 'Montserrat', sans-serif;
  font-weight: 400;
  line-height: 1.5;
  font-size: 16px;
  color: var(--dark);
}

h1,
h2,
h3,
h4,
h5
{
  font-family: 'Bebas Neue', sans-serif;
  margin: 0px;
  line-height: 1.25;
}

h1 {
  font-size: 2.25rem;
}

h2 {
  font-size: 2rem;
}

h3 {
  font-family: 'Bebas Neue', sans-serif;
  font-size: 1.75rem;
  color: var(--primary)
}

h4 {
  font-family: 'Montserrat', sans-serif;
  font-size: 1.3rem;
}

h5 {
  font-family: 'Montserrat', sans-serif;
  font-size: 1.15rem;
  font-weight: 600;
  margin: 0 0 0.5rem 0;
}

h6 {
  font-family: 'Montserrat', sans-serif;
  font-size: 1rem;
  margin: 0 0 0.5rem 0;
  font-weight: 600;
}

p {
  font-size: 1rem;
  margin-top: 0;
}

a {
  color: var(--tertiary);
  text-decoration: none;
}

a:hover {
  text-decoration: underline;
}

header {
  background: var(--dark);
}

header a {
  color: var(--light);
}

button {
  font-size: 1rem;
  text-decoration: none;
  padding: 0.25rem 1rem;
  border-radius: .5rem;
  border: none;
  outline: none;
  cursor: pointer;
  margin: 0 1px;
  background-color: var(--primary);
}

button:hover {
  opacity: .8;
}

button[disabled] {
  cursor: default;
  opacity: .8;
}

img {
  max-width: 100%;
}

span[role="img"] {
  cursor: default;
}

input {
  font-size: 1rem;
  padding: 10px;
  border: 1px solid var(--dark);
  outline: none;
  border-radius: 3px;
  transition: box-shadow 0.2s;
  background-color: var(--medium);
  color: var(--light);
}

input:focus {
  border: 1px solid var(--primary);
  box-shadow: 0 0 .25rem rgba(0, 0, 0, .5);
}

/* Date picker */
.DateInput {
  background-color: var(--dark);
  width: initial;
}

.DateRangePickerInput {
  border-radius: 0px;
  border: none;
  background-color: var(--medium);
}

.DateInput_input {
  border: 1px solid transparent;
}

.DateInput_input:focus {
  border: 1px solid var(--primary);
}

.DateRangePickerInput_arrow_svg {
  fill: rgba(255, 255, 255, 0.7);
}

/* Dropdown */
select {
  padding: 10px 10px; 
  border: none;
  background-color: var(--medium);
  color: var(--light);
  font-size: 15px;
}

select:invalid {
  color: rgba(255, 255, 255, 0.7);
}

select:focus {
  outline: 1px solid var(--primary);
}

.btn-primary:focus, .btn:focus {
  box-shadow: none;
}

.container {
  width: 85%;
  max-width: 1200px;
  margin-left: auto;
  margin-right: auto;
}

.flex-row {
  display: flex;
}

.flex-column {
  display: flex;
  flex-direction: column;
}

.space-between {
  justify-content: space-between;
}

.flex-end {
  justify-content: flex-end;
}

.mx-1 {
  margin-right: var(--spacing-one);
  margin-left: var(--spacing-one);
}

.mx-2 {
  margin-right: var(--spacing-two);
  margin-left: var(--spacing-two);
}

.mx-3 {
  margin-right: var(--spacing-three);
  margin-left: var(--spacing-three);
}

.mx-4 {
  margin-right: var(--spacing-four);
  margin-left: var(--spacing-four);
}

.my-1 {
  margin-top: var(--spacing-one);
  margin-bottom: var(--spacing-one);
}

.my-2 {
  margin-top: var(--spacing-two);
  margin-bottom: var(--spacing-two);
}

.px-1 {
  padding-right: var(--spacing-one);
  padding-left: var(--spacing-one);
}

.px-2 {
  padding-right: var(--spacing-two);
  padding-left: var(--spacing-two);
}

.px-3 {
  padding-right: var(--spacing-three);
  padding-left: var(--spacing-three);
}

.px-4 {
  padding-right: var(--spacing-four);
  padding-left: var(--spacing-four);
}

.py-1 {
  padding-top: var(--spacing-one);
  padding-bottom: var(--spacing-one);
}

.py-2 {
  padding-top: var(--spacing-two);
  padding-bottom: var(--spacing-two);
}

.py-3 {
  padding-top: var(--spacing-three);
  padding-bottom: var(--spacing-three);
}

.py-4 {
  padding-top: var(--spacing-four);
  padding-bottom: var(--spacing-four);
}

.error-text {
  color: var(--error);
}

/* Homepage */
.hero-image {
  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/hero-home.jpg");
  height: 430px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

.hero-text {
  color: var(--light);
  margin-left: 4rem;
  padding-top: 5rem;
  max-width: 400px;
}

.hero-text a:hover {
  color: var(--light);
}

.hero-text svg {
  margin-left: 4px;
  color: var(--primary);
}

.card {
  width: 25%;
  text-align: center;
}

.text-block {
  text-align: center;
  max-width: 700px;
  margin: 56px auto;
}

.text-block.text-block-left {
  text-align: left;
}

/* About */
.hero-image-small {
  background-image: url("assets/hero-home.jpg");
  height: 280px;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
}

/* Navbar */
header {
  height: 72px;
  overflow: hidden;
}

nav a {
  font-family: 'Bebas Neue', sans-serif;
  font-size: 21px;
  letter-spacing: 1px;
  text-transform: capitalize;
  opacity: 0.75;
  transition: all 0.15s;
  display: inline-block;
  margin-top: 21px;
}

nav a:hover {
  color: var(--light);
  opacity: 1;
  text-decoration: none;
  transition: all 0.15s;
}

nav > div {
  width: 100%;
}

.nav-auth-links {
  margin-right: 96px;
}

.logo {
  transform: translateY(-37%);
  display: inline-block;
}

.active {
  color: var(--primary);
  opacity: 1;
}

.active:hover {
  color: var(--primary);
}

/* Cart */
.cart {
  color: var(--light);
  height: 100%;
  position: fixed;
  top: 0;
  right: 0;
  z-index: 999;
  background: rgba(16, 16, 16, 1);
  transform: translateX(100%);
  transition: transform 0.3s;
  padding: 24px;
}

.cart h2 {
  text-align: center;
  flex-grow: 1;
}

.cart-price h5, .cart-price p {
  display: inline;
}

.cart.open {
  transform: translateX(0);
  box-shadow: 2px -15px 5px 1px rgba(0, 0, 0, 1);
  overflow-y: scroll;
}

.cart img {
  width: 100px;
  margin-right: 16px;
}

.cart-remove {
  text-decoration: underline;
  cursor: pointer;
}

.cart-item-num {
  color: var(--secondary);
  background-color: var(--primary);
  width: 18px;
  height: 18px;
  font-family: 'Bebas Neue', sans-serif;
  position: absolute;
  right: 50px;
  top: 14px;
  border-radius: 50px;
  z-index: 99;
}

.cart-item-num p {
  text-align: center;
  font-size: 1rem;
  margin-top: -1px
}

.cart-backdrop {
  position: fixed;
  width: 100%;
  height: 100%;
  background-color: rgba(255,255,255,0.2);
  z-index: 100;
  top: 0;
  right: 0;
  -webkit-backdrop-filter: blur(4px);
  backdrop-filter: blur(4px);
}

.cart-closed {
  position: absolute;
  right: 32px;
  top: 0;
  margin-top: 6px;
  color: var(--light);
  cursor: pointer;
  height: 40px;
}

.cart-closed span {
  display: block;
  height: 58px;
  width: 40px;
  cursor: pointer;
}

.cart-closed svg {
  position: relative; 
  top: 14px;
}

.close {
  cursor: pointer;
}

/* Reservations */
.reservation {
  background-color: var(--primary-light);
  padding: 1px 0 56px 0;
}

.reservation-block:not(:last-child) {
  margin-right: 1.5rem;
}

.reservation-step {
  width: 30px;
  height: 30px;
  text-align: center;
  background-color: var(--primary);
  font-weight: 600;
  font-size: 14px;
  padding-top: 5px;
}

.footnote {
  font-size: 12px;
}

/* Footer */
footer {
  background-color: var(--dark);
  color: var(--light);
  padding-top: 32px;
}

footer p {
  margin-bottom: 0.5rem;
}

footer label {
  display: block;
}

.footer-row {
  padding-bottom: 32px;
  padding-top: 32px;
}

.footer-row.footer-row-top {
  border-bottom: 1px solid rgba(193, 193, 193, 0.5);
}

input {
  border-radius: 0;
}

input[type="text"] {
  font-family: 'Montserrat', sans-serif;
  font-size: 15px;
  padding: 8px 12px;
  border: 1px solid transparent;
  background: rgba(255, 255, 255, 0.2);
  color: var(--light);
}

input[type="text"]::placeholder {
  color: rgba(255, 255, 255, 0.7);
}

input[type="submit"] {
  background-color: var(--primary);
  font-family: 'Montserrat', sans-serif;
  font-weight: 600;
  font-size: 15px;
  padding: 8px 18px;
  border: none;
}

.social-link {
  margin-left: 0.75rem;
}

.social-link:hover {
  cursor: pointer;
}

.social-link.social-link-circle {
  height: 30px;
  width: 30px;
  background-color: var(--light);
  border-radius: 50px;
  text-align: center;
}

.social-link.social-link-circle svg {
  color: var(--dark);
  position: relative;
  top: 2px;
}

@media screen and (max-width: 768px) {
  .card {
    width: 100%;
  }
}

